# routilux

./: .gitignore  .pre-commit-config.yaml  BREAKPOINT_IMPROVEMENT_PLAN.md  CHANGELOG.md  CLAUDE.md  CONCURRENT_FEATURE_SUMMARY.md  CONTRIBUTING.md  FINAL_SUMMARY.md  Makefile  README.md  REDESIGN_ANALYSIS_REPORT_20260116_133526.md  REFACTORING_DEVELOPMENT_PLAN_20260116_133526.md  SETUP.md  coverage.json  install.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  routine_analysis.md  routine_analysis_demo.json  workflow_analysis_demo.json  workflow_demo.d2  workflow_demo_default.d2  workflow_demo_detailed.d2  workflow_simple_demo.json
.claude/: ralph-loop.local.md
.github/workflows/: benchmark.yml  ci.yml  release.yml  security.yml
docs/: ID_USAGE_GUIDE.md  refactor_implementation_summary.md  refactor_proposal.md
docs/plans/: 2026-02-05-A03-p0-p1-improvements.md  2026-02-05-code-review-improvements-p0-p1.md  2026-02-05-code-review-improvements-summary.md  2026-02-05-p2-improvements-design.md  2026-02-05-p2-improvements-plan.md  2026-02-05-p2-improvements-summary.md  2026-02-09-workflow-cli-implementation.md
docs/reviews/: A03-code-review.md  A05.md
docs/source/: changelog.rst  design_architecture.rst  design_overview.rst  features.rst  http_api.rst  index.rst  installation.rst  introduction.rst  quickstart.rst
docs/verifications/: 1b3c-routilux-v05-verification.md  V04收口检查.md  v01-checklist.md  v02-code-review-checklist.md
examples/: README.md  aggregator_demo.py  analyzer_demo.py  analyzer_demo_full.py  analyzer_demo_routines.py  analyzer_demo_workflow.py  async_orchestration.py  basic_example.py  builtin_routines_demo.py  concurrent_flow_demo.py  data_pipeline.py  debugger_test_app.py  error_handling.py  error_handling_example.py  formatter_demo.py  job_state_management.py  llm_agent_complex_demo.py  long_running_workflow.py  overseer_demo_app.py  register_test_flows.py  retry_with_router_demo.py  run_debugger_server.py  state_management_example.py
flowforge/: connection.py  error_handler.py  event.py  execution_tracker.py  flow.py  job_state.py  routine.py  slot.py
flowforge/utils/: serializable.py
playground/: README.md  __init__.py
playground/llm_agent_cross_host/: README.md  __init__.py  cross_host_demo.py  enhanced_routine.py  llm_agent_routine.py  logger.py  mock_llm.py  mock_storage.py
playground/misconfiguration_demo/: README.md  __init__.py  misconfiguration_demo.py
playground/retry_serialization_demo/: ANALYSIS.md  ENHANCED_README.md  IMPROVEMENTS.md  README.md  __init__.py  data_processing_routines.py  enhanced_retry_demo.py  failing_routine.py  retry_demo.py  showcase_scenarios.py
routilux/: __init__.py  activation_policies.py  connection.py  error_handler.py  event.py  exceptions.py  execution_tracker.py  flow.py  job_executor.py  job_manager.py  job_state.py  metrics.py  output_handler.py  py.typed  routine.py  routine_analyzer.py  routine_mixins.py  runtime.py  serialization_utils.py  slot.py  status.py  validators.py  workflow_analyzer.py
routilux/analysis_formatters/: __init__.py  base.py  routine_markdown.py  workflow_d2.py
routilux/api/: config.py  main.py  security.py  validators.py
routilux/builtin_routines/: __init__.py
routilux/cli/: __init__.py  decorators.py  discovery.py  main.py  server_wrapper.py
routilux/core/: __init__.py  connection.py  context.py  error.py  event.py  executor.py  flow.py  hooks.py  manager.py  output.py  registry.py  routine.py  runtime.py  slot.py  status.py  task.py  worker.py
routilux/dsl/: __init__.py  loader.py  spec_parser.py
routilux/flow/: __init__.py  builder.py  completion.py  dependency.py  error_handling.py  event_loop.py  execution.py  flow.py  job_state_management.py  serialization.py  state_management.py  task.py  validation.py
routilux/monitoring/: __init__.py  breakpoint_condition.py  breakpoint_manager.py  debug_session.py  event_manager.py  execution_hooks.py  flow_registry.py  hooks.py  job_registry.py  monitor_collector.py  monitor_service.py  registry.py  runtime_registry.py  storage.py  storage_backend.py  websocket_manager.py
routilux/server/: dependencies.py  errors.py  main.py  validators.py
routilux/testing/: __init__.py  routine_tester.py
routilux/tools/: __init__.py
scripts/: README.md
tests/: CONCURRENT_TESTING_SUMMARY.md  TEST_COVERAGE_REPORT.md  TEST_MONITORING_FEATURES.md  TEST_SUMMARY_MONITORING.md  conftest.py  run_concurrent_tests.py  test_activation_policies.py  test_aggregator_pattern.py  test_api_jobs_comprehensive.py  test_api_v1.py  test_breakpoint_api.py  test_breakpoint_integration_runtime.py  test_breakpoint_redesign.py  test_breakpoint_runtime_integration_comprehensive.py  test_builtin_routines_full_coverage.py  test_concurrent_execution.py  test_connection.py  test_connection_comprehensive.py  test_core_context.py  test_core_flow.py  test_core_output.py  test_core_routine.py  test_core_runtime_basic.py  test_core_runtime_integration.py  test_core_slot_event_connection.py  test_core_status.py  test_core_worker_state.py  test_decorators.py  test_error_handler_comprehensive.py  test_error_handler_retryable_exceptions.py  test_error_handling_comprehensive.py  test_error_handling_status_fix.py  test_event.py  test_event_comprehensive.py  test_exceptions.py  test_execution_completion.py  test_execution_state_management.py  test_execution_tracker_comprehensive.py  test_flow.py  test_flow_comprehensive.py  (+38 more)
tests/analysis/: test_base_formatter.py  test_exporters.py  test_routine_analyzer.py  test_workflow_analyzer.py
tests/benchmarks/: __init__.py  test_concurrent_benchmark.py  test_emit_benchmark.py  test_end_to_end_benchmark.py  test_large_workflow_benchmark.py  test_serialization_benchmark.py  test_slot_benchmark.py
tests/builtin_routines/: test_new_routines.py  test_registration.py
tests/cli/: test_cli_integration.py  test_decorators.py  test_discovery.py  test_server_integration.py
tests/concurrent/: __init__.py  test_deadlocks.py  test_executor_cleanup.py  test_lock_ordering.py  test_manager_registration.py  (+4 more)
(+183 files in other folders)
